--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -19,7 +19,7 @@
   border-radius: 3.125rem;
 
   background: transparent;
-  color: #03a9f4;
+  color: #03f47b;
   font-weight: 600;
   font-size: 0.875rem;
   box-shadow: inset -2px -2px 6px rgba(255, 255, 255, 0.1),
